--- a/StockAnalysis.html
+++ b/StockAnalysis.html
@@ -217,7 +217,7 @@ function hreflookup ( myid ) {
 <input type="text" name="aaa" size=100>
 </td></tr>
 <tr><td><a href="/" id="c3" onclick="cLink(this.id );" target="stockchart2">Company Profile</a></td><td>
-<input type="text" name="rsi2" value='tanloan8888 wealthytan1!' size=100>
+<input type="text" name="rsi2" value='' size=100>
 </td></tr>
 <tr><td><a href="/" id="c6" onclick="cLink(this.id);" target="yahoo" >Major Holders (Yahoo)</a></td><td>
 <input type="text" name="aaa" size=100>
